docs: Add JavaDoc, package-info files, and update project documentation
- Add CLAUDE.md with build commands and architecture overview
- Update README, WORKFLOW, and EXPRESSION_EVALUATION docs for Maven build
- Create package-info.java for all 4 packages (core, evaluation,
  evaluation/exceptions, watchers)
- Add JavaDoc to JDIConnectionService, BreakpointTracker, JdiEventListener,
  JdiExpressionEvaluator, and JDWPTools helper methods
- Add inline comments for JDK-internal field dependencies in collection rendering